--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "google-auth-library": "^4.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.12",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "stripe": "^7.1.0"
   },
   "devDependencies": {
     "concurrently": "^4.1.0",
