--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.5.12",
         "request": "^2.88.0",
+        "spherical-geometry-js": "^1.4.0",
         "stripe": "^7.1.0"
     },
     "devDependencies": {
