--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "server.js",
     "scripts": {
         "start": "node server",
-        "server": "nodemon server"
+        "server": "nodemon server",
+        "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false"
     },
     "author": "Nicholas Sinai",
     "license": "MIT",
