--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "scripts": {
         "start": "node server",
         "server": "nodemon server",
+        "client": "npm start --prefix client",
+        "dev": "concurrently \"npm run server\" \"npm run client\"",
         "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false"
     },
     "author": "Nicholas Sinai",
