--- a/client/package.json
+++ b/client/package.json
@@ -8,9 +8,11 @@
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
         "react-moment": "^0.9.2",
+        "react-places-autocomplete": "^7.2.1",
         "react-redux": "^7.1.0",
         "react-router-dom": "^5.0.1",
         "react-scripts": "3.0.1",
+        "react-stripe-elements": "^3.0.0",
         "redux": "^4.0.1",
         "redux-devtools-extension": "^2.13.8",
         "redux-thunk": "^2.3.0",
@@ -37,5 +39,5 @@
             "last 1 safari version"
         ]
     },
-    "proxy": "http://localhost:5000"
+    "proxy": "http://localhost:5000" 
 }
