--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "dependencies": {
         "bcryptjs": "^2.4.3",
         "config": "^3.1.0",
+        "cors": "^2.8.5",
         "express": "^4.17.1",
         "express-validator": "^5.3.1",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.5.12",
+        "morgan": "^1.9.1",
         "request": "^2.88.0",
         "spherical-geometry-js": "^1.4.0",
         "stripe": "^7.1.0"
